--- a/InvoiceApp/Content/invoices.css
+++ b/InvoiceApp/Content/invoices.css
@@ -76,7 +76,7 @@ div.message.error {
 
 .formWrapper{
     position: relative;
-    padding: 30px 35px 20px 35px;
+    padding: 20px 35px 20px 35px;
     margin: 30px 10px;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
     background: #FFF none repeat scroll 0% 0%;
@@ -135,3 +135,58 @@ div.message.error {
 
 
 
+.Section{
+    position: relative;
+    width: auto;
+    margin: 10px 40px 25px 0px;
+    padding: 10px 20px;
+    background-color: #FFF;
+    border: 1px solid #D9E1E8;
+    border-radius: 4px;
+    border-collapse: separate;
+    background: #F8F8F8  none repeat scroll 0% 0%;
+    
+}
+
+.Section .title {
+    margin: -5px 0px 15px;
+    padding: 10px 0px 0px 10px;
+    font-family: "Open Sans",sans-serif;
+}
+
+.Section label{
+    font-weight:100;
+}
+
+.Section .summary{
+    position: relative;
+    display: block;
+    text-transform: uppercase;
+    text-align: left;
+    padding: 0px 0px 0px 10px;
+}
+
+.Section .summary .item{
+   display:inline-block;
+   margin: 0px 70px 0px 0px;
+}
+
+
+.Section .summary .item .subTitle{
+    font-size: 15px;
+    color: #929292;
+    padding-bottom: 2px;
+}
+.Section .summary .item .amount{
+    padding-bottom: 8px;
+    font-weight:200;    
+    font-size: 25px;
+    color: #000;
+}
+
+.Section .summary .item .total{
+    padding-bottom: 8px;
+    font-weight:200;    
+    font-size: 25px;
+    color: #E78011;
+}
