Push before deleting oriignal files

--- a/InvoiceApp/Content/invoices.css
+++ b/InvoiceApp/Content/invoices.css
@@ -198,7 +198,10 @@ textarea {
     margin-right: 40px;
 }
 
-
+.formControls{
+    margin-bottom:30px;
+    margin-right:50px;
+}
 
 /*Warning and Error messages for invoice limits*/
 div.message {
